@@ -6,4 +6,5 @@ various improvements or submitting actual code.  Here is a list of these
 people, alphabetically by surname.  Help me keep it complete and exempt of
 errors.
 
+Matt Palmer     <mpalmer@debian.org>
 Glen Turner		<glen.turner@aarnet.edu.au>
